@@ -6,6 +6,7 @@ Version 0.9.9-git - 130613
 - update http method to POST in SMS custom (endymuhardin)
 - update deprecated commands eregi, ereg and ereg_replace with preg_match and preg_replace
 - update Send SMS page to split between send to numbers and to groups
+- update webservices to require username when validating requests
 - add new webservices type of action get_contact to get contact lists
 - add new webservices ta=get_contact_group to search group contacts by name or code
 - add new webservices ta=get_contact to search contacts by name, mobile or email
